--- a/style.css
+++ b/style.css
@@ -50,15 +50,15 @@
 	margin: 20px;
 	-webkit-border-radius: 18px;
 	border-radius: 18px;
-	-webkit-box-shadow: 0px 0px 6px #057;
-	box-shadow: 0px 0px 6px #057;
+	-webkit-box-shadow: 0px 0px 6px #f1f8e0;
+	box-shadow: 0px 0px 6px #f1f8e0;
 	background-image: -webkit-gradient(linear, left top, right top, from(#f1f8e0), to(#f1f8e0));
 	background-image: -webkit-linear-gradient(left, #f1f8e0, #f1f8e0);
 	background-image: linear-gradient(left, #f1f8e0, #f1f8e0);
 	-webkit-background-clip: padding-box;
 	background-clip: padding-box;
 	opacity: 0.83;
-	background-color:#f1f8e0
+	
 }
 
 #edito h2
@@ -77,11 +77,11 @@
 	margin: 20px;
 	-webkit-border-radius: 18px;
 	border-radius: 18px;
-	-webkit-box-shadow: 0px 0px 6px #f1f8e0;
-	box-shadow: 0px 0px 6px #f1f8e0;
+	-webkit-box-shadow: 0px 0px 6px #ffffff;
+	box-shadow: 0px 0px 6px #ffffff;
 	background-image: -webkit-gradient(linear, left top, right top, from(#f1f8e0), to(#f1f8e0));
-	background-image: -webkit-linear-gradient(left, #f1f8e0, #f1f8e0);
-	background-image: linear-gradient(left, #f1f8e0, #f1f8e0);
+	background-image: -webkit-linear-gradient(left, #ffffff, #ffffff);
+	background-image: linear-gradient(left, #ffffff, #fffff);
 	-webkit-background-clip: padding-box;
 	background-clip: padding-box;
 00	opacity: 0.83;
